# grendel_poc2

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: texture_fragment.glsl  texture_vertex.glsl
include/: engine.h  entity.h
include/opengl/: camera.h  indexbuffer.h  mesh.h  model.h  program.h  renderer.h  shader.h  texture2d.h  transform.h  vertexarray.h  vertexbuffer.h  vertexbufferlayout.h  window.h
include/opengl/shapes/: quad.h
include/renderers/: renderer.h
include/shaders/: program.h
src/: engine.cpp  entity.cpp  main.cpp
src/objects/: camera.cpp
src/opengl/: camera.cpp  indexbuffer.cpp  mesh.cpp  model.cpp  obj_loader.cpp  program.cpp  renderer.cpp  shader.cpp  texture2d.cpp  vertexarray.cpp  vertexbuffer.cpp  window.cpp
src/renderers/: renderer.cpp
src/shaders/: program.cpp  shader.cpp
